--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.16MB/s(Youtube:不良林), server: 38.143.66.20, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇳 中国-3.35MB/s(Youtube:不良林), server: 120.241.236.113, port: 16245, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.26MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
   - {name: 🇨🇳 中国-510.6KB/s(Youtube:不良林), server: 120.241.236.218, port: 16214, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.19MB/s(Youtube:不良林), server: 38.143.66.20, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-1.32MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-3.46MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-2.85MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇨🇳 中国-175.2KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: 38.143.66.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-1.64MB/s(Youtube:不良林), server: 38.143.66.20, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-3.34MB/s(Youtube:不良林), server: 38.143.66.20, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-3.18MB/s(Youtube:不良林), server: 38.143.66.20, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇺🇸 美国-1.54MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.09MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-510.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-175.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-510.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-175.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-510.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-175.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-510.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-175.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-510.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-175.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-510.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-175.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.35MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-510.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-175.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.09MB/s(Youtube:不良林)
 rules:
